--- a/The Restaurant/src/main/resources/templates/about.html
+++ b/The Restaurant/src/main/resources/templates/about.html
@@ -67,7 +67,7 @@
 						<div class="button-group filter-button-group">
 							<button class="active" data-filter="*">All</button>
 							<button data-filter=".drinks">Drinks</button>
-							<button data-filter=".lunch">Lunch</button>
+							<button data-filter=".showLunch">Lunch</button>
 							<button data-filter=".dinner">Dinner</button>
 						</div>
 					</div>
@@ -108,7 +108,7 @@
 					</div>
 				</div>
 				
-				<div class="col-lg-4 col-md-6 special-grid lunch">
+				<div class="col-lg-4 col-md-6 special-grid showLunch">
 					<div class="gallery-single fix">
 						<img src="images/img-04.jpg" class="img-fluid" alt="Image">
 						<div class="why-text">
@@ -119,7 +119,7 @@
 					</div>
 				</div>
 				
-				<div class="col-lg-4 col-md-6 special-grid lunch">
+				<div class="col-lg-4 col-md-6 special-grid showLunch">
 					<div class="gallery-single fix">
 						<img src="images/img-05.jpg" class="img-fluid" alt="Image">
 						<div class="why-text">
@@ -130,7 +130,7 @@
 					</div>
 				</div>
 				
-				<div class="col-lg-4 col-md-6 special-grid lunch">
+				<div class="col-lg-4 col-md-6 special-grid showLunch">
 					<div class="gallery-single fix">
 						<img src="images/img-06.jpg" class="img-fluid" alt="Image">
 						<div class="why-text">
