--- a/The Restaurant/src/main/resources/templates/index.html
+++ b/The Restaurant/src/main/resources/templates/index.html
@@ -123,7 +123,7 @@
 						<div class="button-group filter-button-group">
 							<button class="active" data-filter="*">All</button>
 							<button data-filter=".drinks">Drinks</button>
-							<button data-filter=".lunch">Lunch</button>
+							<button data-filter=".showLunch">Lunch</button>
 							<button data-filter=".dinner">Dinner</button>
 						</div>
 					</div>
@@ -164,7 +164,7 @@
 					</div>
 				</div>
 				
-				<div class="col-lg-4 col-md-6 special-grid lunch">
+				<div class="col-lg-4 col-md-6 special-grid showLunch">
 					<div class="gallery-single fix">
 						<img src="images/img-04.jpg" class="img-fluid" alt="Image">
 						<div class="why-text">
@@ -175,7 +175,7 @@
 					</div>
 				</div>
 				
-				<div class="col-lg-4 col-md-6 special-grid lunch">
+				<div class="col-lg-4 col-md-6 special-grid showLunch">
 					<div class="gallery-single fix">
 						<img src="images/img-05.jpg" class="img-fluid" alt="Image">
 						<div class="why-text">
@@ -186,7 +186,7 @@
 					</div>
 				</div>
 				
-				<div class="col-lg-4 col-md-6 special-grid lunch">
+				<div class="col-lg-4 col-md-6 special-grid showLunch">
 					<div class="gallery-single fix">
 						<img src="images/img-06.jpg" class="img-fluid" alt="Image">
 						<div class="why-text">
