--- a/The Restaurant/src/main/resources/templates/dinners.html
+++ b/The Restaurant/src/main/resources/templates/dinners.html
@@ -25,6 +25,28 @@
     <button type="submit" class="custom-button">  Add Dinner</button>
   </form>
 
+  <div class="col-lg-4 col-md-6 special-grid dinner">
+    <div class="gallery-single fix">
+      <img src="images/img-07.jpg" class="img-fluid" alt="Image">
+      <div class="why-text">
+        <h4>Special Dinner 1</h4>
+        <p>Sed id magna vitae eros sagittis euismod.</p>
+        <h5> $25.79</h5>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 special-grid dinner">
+    <div class="gallery-single fix">
+      <img src="images/img-08.jpg" class="img-fluid" alt="Image">
+      <div class="why-text">
+        <h4>Special Dinner 2</h4>
+        <p>Sed id magna vitae eros sagittis euismod.</p>
+        <h5> $22.79</h5>
+      </div>
+    </div>
+  </div>
+
 </div>
 
 
