--- a/The Restaurant/src/main/resources/templates/drinks.html
+++ b/The Restaurant/src/main/resources/templates/drinks.html
@@ -25,8 +25,30 @@
       <button type="submit" class="custom-button">  Add Drink</button>
     </form>
 
-  </div>
+    <div class="row special-list">
+        <div class="col-lg-4 col-md-6 special-grid drinks">
+            <div class="gallery-single fix">
+                <img src="images/img-01.jpg" class="img-fluid" alt="Image">
+                <div class="why-text">
+                    <h4>На Наков Сливовата</h4>
+                    <p>Варена под сливата от която са брани плодовете</p>
+                    <h5> $7.79</h5>
+                </div>
+            </div>
+        </div>
 
+        <div class="col-lg-4 col-md-6 special-grid drinks">
+            <div class="gallery-single fix">
+                <img src="images/img-02.jpg" class="img-fluid" alt="Image">
+                <div class="why-text">
+                    <h4>Special Drinks 3</h4>
+                    <p>Sed id magna vitae eros sagittis euismod.</p>
+                    <h5> $9.79</h5>
+                </div>
+            </div>
+        </div>
+
+  </div>
 
  </body>
 
