--- a/The Restaurant/src/main/resources/templates/lunches.html
+++ b/The Restaurant/src/main/resources/templates/lunches.html
@@ -25,6 +25,28 @@
         <button type="submit" class="custom-button">  Add Lunch</button>
     </form>
 
+    <div class="col-lg-4 col-md-6 special-grid showLunch">
+        <div class="gallery-single fix">
+            <img src="images/img-04.jpg" class="img-fluid" alt="Image">
+            <div class="why-text">
+                <h4>Special Lunch 1</h4>
+                <p>Sed id magna vitae eros sagittis euismod.</p>
+                <h5> $15.79</h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6 special-grid showLunch">
+        <div class="gallery-single fix">
+            <img src="images/img-05.jpg" class="img-fluid" alt="Image">
+            <div class="why-text">
+                <h4>Special Lunch 2</h4>
+                <p>Sed id magna vitae eros sagittis euismod.</p>
+                <h5> $18.79</h5>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
