--- a/The Restaurant/src/main/resources/static/css/style.css
+++ b/The Restaurant/src/main/resources/static/css/style.css
@@ -1323,7 +1323,9 @@ blockquote {
     transition: opacity 0.2s ease-out;
 	font-size: 30px;
 }
-
+.error {
+	color: red;
+}
 
 /** ADD YOUR AWESOME CODES HERE **/
 
