--- a/The Restaurant/src/main/resources/templates/successReservation.html
+++ b/The Restaurant/src/main/resources/templates/successReservation.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head}">
-  <link rel="stylesheet" href="style.css"> <!-- Връзка към CSS стилове -->
-</head>
-<body>
 
-<div class="container">
-  <p th:text="Име на потребителя"></p>
-  <h1>Вие направихте Успешна регистрация</h1>
-  <p th:text="${successMessage}"></p>
-  <p th:text="'Име на потребителя: ' + ${userName}"></p>
-  <!-- Други елементи и стилове, ако е необходимо -->
+</head>
+
+<nav th:replace="~{fragments/navbar}"></nav>
+<body>
+<div class="all-page-title page-breadcrumb">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>Вие направихте успешна регистрация !!!</h1>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
+
+
+
+
+
