--- a/The Restaurant/src/main/resources/templates/index.html
+++ b/The Restaurant/src/main/resources/templates/index.html
@@ -338,7 +338,26 @@
 		</div>
 	</div>
 	<!-- End Customer Reviews -->
-	
+	<div class="customer-reviews-box">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="heading-title text-center">
+						<h2>Comments</h2>
+						<p>Add yours comments:</p>
+					</div>
+					<div>
+						<label for="commentText">Comment:</label>
+						<input type="text" id="commentText" required>
+						<button id="commentButton" onclick="addComment()">Add Comment</button>
+					</div>
+					<ul id="commentsList"></ul>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 	<!-- Start Contact info -->
 	<div class="contact-imfo-box">
 		<div class="container">
@@ -436,6 +455,7 @@
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+
     <!-- ALL PLUGINS -->
 	<script src="js/jquery.superslides.min.js"></script>
 	<script src="js/images-loded.min.js"></script>
@@ -444,5 +464,6 @@
 	<script src="js/form-validator.min.js"></script>
     <script src="js/contact-form-script.js"></script>
     <script src="js/custom.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
