--- a/The Restaurant/src/main/resources/templates/auth-login.html
+++ b/The Restaurant/src/main/resources/templates/auth-login.html
@@ -41,7 +41,8 @@
             <input  id="rememberme"
                     name="rememberme"
                     type="checkbox"
-                    class="form-control"/>
+                    class="form-control"
+                    placeholder="Remember me"/>
 
         </div>
 
