--- a/The Restaurant/src/main/resources/templates/contact.html
+++ b/The Restaurant/src/main/resources/templates/contact.html
@@ -22,14 +22,14 @@
 	</div>
 	<!-- End All Pages -->
 	
-	<!-- Start Contact
+	<!-- Start Contact -->
 	<div class="map-full"></div>
 	<div class="contact-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="heading-title text-center">
-						<h2>Contact</h2>
+					<!--	<h2>Contact</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
 					</div>
 				</div>
@@ -42,13 +42,13 @@
 								<div class="form-group">
 									<input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required data-error="Please enter your name">
 									<div class="help-block with-errors"></div>
-								</div>                                 
+								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
 									<input type="text" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
 									<div class="help-block with-errors"></div>
-								</div> 
+								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
@@ -61,26 +61,26 @@
 									  <option value="5">5</option>
 									</select>
 									<div class="help-block with-errors"></div>
-								</div> 
+								</div>
 							</div>
 							<div class="col-md-12">
-								<div class="form-group"> 
+								<div class="form-group">
 									<textarea class="form-control" id="message" placeholder="Your Message" rows="4" data-error="Write your message" required></textarea>
 									<div class="help-block with-errors"></div>
 								</div>
 								<div class="submit-button text-center">
 									<button class="btn btn-common" id="submit" type="submit">Send Message</button>
-									<div id="msgSubmit" class="h3 text-center hidden"></div> 
-									<div class="clearfix"></div> 
+									<div id="msgSubmit" class="h3 text-center hidden"></div>
+									<div class="clearfix"></div>
 								</div>
 							</div>
-						</div>            
+						</div>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
-	 End Contact -->
+	 -->
 	
 	<!-- Start Contact info -->
 	<div class="contact-imfo-box">
@@ -100,7 +100,7 @@
 					<div class="overflow-hidden">
 						<h4>Email</h4>
 						<p class="lead">
-							yourmail@gmail.com
+							therestaurantyamifood@gmail.com
 						</p>
 					</div>
 				</div>
@@ -193,8 +193,8 @@
 		$('.map-full').mapify({
 			points: [
 				{
-					lat: 40.7143528,
-					lng: -74.0059731,
+					lat: 42.202303,
+					lng:  24.320040,
 					marker: true,
 					title: 'Marker title',
 					infoWindow: 'Yamifood Restaurant'
@@ -202,5 +202,5 @@
 			]
 		});	
 	</script>
-</body>
+ </body>
 </html>
