--- a/The Restaurant/src/main/resources/templates/successReservation.html
+++ b/The Restaurant/src/main/resources/templates/successReservation.html
@@ -10,7 +10,7 @@
   <div class="container text-center">
     <div class="row">
       <div class="col-lg-12">
-        <h1>Вие направихте успешна регистрация !!!</h1>
+        <h1>Вие направихте успешна резервация !!!</h1>
       </div>
     </div>
   </div>
